@@ -1,3 +1,8 @@
+2004-10-27  Todd Berman  <tberman@off.net>
+
+	* Commands/AutoStartCommands.cs: Fix the Load Previous Project on
+	Startup option.
+
 2004-10-27  John Luke  <john.luke@gmail.com>
 
 	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyParameter.cs
